# mate-deskbar-applet

./: .cvsignore  AUTHORS  ChangeLog  ChangeLog.pre-git  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  deskbar-applet.doap
data/: .cvsignore  Deskbar_Applet.server.in.in  Deskbar_Applet.xml  Deskbar_Applet.xml.in  Makefile.am  default-engines.txt  deskbar-applet.desktop.in.in  deskbar-applet.pc.in  deskbar-applet.schemas.in  mozilla-search.glade  mozilla-search.ui  prefs-dialog.glade  prefs-dialog.ui  smart-bookmarks.glade  smart-bookmarks.ui
data/art/: Makefile.am  deskbar-applet-small.xcf
deskbar/: .cvsignore  BrowserMatch.py  Categories.py  DeskbarApplet.py  DeskbarAppletPreferences.py  DeskbarHistory.py  Handler.py  Indexer.py  Keybinder.py  Makefile.am  Match.py  ModuleContext.py  ModuleInstaller.py  ModuleList.py  ModuleLoader.py  Utils.py  Watcher.py  __init__.py  about.py  applet.py  applet_keybinder.py  defs.py  defs.py.in  deskbar-applet  deskbar-applet.py  deskbarentry.py  filewatcher.py  gtkexcepthook.py  handler.py  handler_file_system.py  handler_gtk_bookmarks.py  handler_prefix.py  handler_utils.py  handlers.py  handlers_browsers.py  history.py  indexer.py  locale_utils.py  ltihooks.py  module_list.py  (+3 more)
deskbar/beagle/: .cvsignore  Makefile.am  __init__.py  _beaglemodule.c  gen-defs.sh
deskbar/core/: BrowserMatch.py  Categories.py  CoreImpl.py  DeskbarHistory.py  GconfStore.py  Indexer.py  Keybinder.py  Makefile.am  ModuleInstaller.py  ModuleList.py  ModuleLoader.py  ThreadPool.py  Utils.py  Watcher.py  Web.py  __init__.py
deskbar/core/_userdirs/: Makefile.am  __init__.py  __userdirsmodule.c
deskbar/core/gnomedesktop/: Makefile.am  _gnomedesktop.override  _gnomedesktopmodule.c
deskbar/core/keybinder/: Makefile.am
deskbar/core/updater/: Capuchin.py  Makefile.am  NewStuffUpdater.py
deskbar/evolution/: .cvsignore  Makefile.am  _evolution.defs  _evolution.override  evolution.c  evolution.h
deskbar/gdmclient/: .cvsignore  Makefile.am  __init__.py  _gdmclient.defs  gdm-logout-action.c
deskbar/gnomedesktop/: Makefile.am  _gnomedesktop.defs
deskbar/handlers/: Makefile.am  beagle-live.py  beagle-static.py  beagle.py  calculator.py  debug-async_handler.py  debug-blockinginit.py  debug-requirements.py  debug-signal_handler.py  desklicious.py  directories.py  email_address.py  epiphany.py  evolution.py  files.py  filesystem.py  galago.py  galeon.py  gdmactions.py  google-live-help.txt  google-live.py  googlecodesearch.py  googlesearch.py  gtkbookmarks.py  handler.py  history.py  iswitch-window.py  mdmactions.py  mozilla.py  networkplaces.py  opensearch.py  pathprograms.py  programs.py  recent.py  templates.py  test_calculator.py  tomboy.py  twitter.py  volumes.py  web_address.py  (+2 more)
deskbar/handlers/actions/: ActionsFactory.py  CopyToClipboardAction.py  GoToLocationAction.py  Makefile.am  OpenDesktopFileAction.py  OpenFileAction.py  OpenWithApplicationAction.py  OpenWithCajaAction.py  OpenWithNautilusAction.py  SendEmailToAction.py  SendFileViaEmailAction.py  ShowUrlAction.py
deskbar/handlers/evolution/: Makefile.am  _evolution.override  evolution.c  evolution.h
deskbar/handlers/gdmclient/: Makefile.am  _gdmclient.override  _gdmclientmodule.c  gdm-logout-action.h
deskbar/iconentry/: .cvsignore  Makefile.am  _iconentry.defs  _iconentry.override  ephy-icon-entry.c
deskbar/interfaces/: Action.py  Controller.py  Core.py  Makefile.am  Match.py  Module.py  View.py  __init__.py
deskbar/keybinder/: .cvsignore  Makefile.am  _keybinder.override  _keybindermodule.c  tomboykeybinder.c
deskbar/osutils/: Makefile.am  __init__.py  _osutilsmodule.c
deskbar/ui/: About.py  AbstractCuemiacDeskbarIcon.py  AbstractCuemiacView.py  CuemiacAlignedView.py  CuemiacWindowController.py  CuemiacWindowView.py  DeskbarApplet.py  DeskbarEntry.py  DeskbarPreferencesUI.py  DeskbarStatusIcon.py  DeskbarTray.py  DeskbarUI.py  EntryHistoryManager.py  Makefile.am  ModuleListView.py
deskbar/ui/completion/: CompletionDeskbarUI.py  DeskbarEntry.py  Makefile.am
deskbar/ui/cuemiac/: Cuemiac.py  CuemiacActionsTreeView.py  CuemiacAlignedWindow.py  CuemiacAppletButton.py  CuemiacButtonUI.py  CuemiacCellRenderer.py  CuemiacCellRendererAction.py  CuemiacCellRendererCategory.py  CuemiacCellRendererMatch.py  CuemiacEntry.py  CuemiacHeader.py  CuemiacHistory.py  CuemiacItems.py  CuemiacLayoutProvider.py  CuemiacModel.py  CuemiacPopupEntry.py  CuemiacTreeView.py  CuemiacUIManager.py  DeskbarAppletButton.py  LingeringSelectionWindow.py  Makefile.am  Sidebar.py
deskbar/ui/entriac/: CuemiacEntryUI.py  Makefile.am
deskbar/ui/iconentry/: Makefile.am  __init__.py  _iconentrymodule.c  ephy-icon-entry.c  ephy-icon-entry.h  gen-defs.sh
deskbar/ui/preferences/: AccelEntry.py  DeskbarPreferences.py  ErrorDialog.py  Makefile.am  ModuleListView.py  ProgressbarDialog.py
deskbar/ui/window/: .cvsignore  CuemiacWindowUI.py  Makefile.am
deskbar/updater/: .cvsignore  ErrorDialog.py  Makefile.am  NewStuffUpdater.py  ProgressbarDialog.py  new-stuff-manager  org.gnome.NewStuffManager.service.in
deskbar/updater/specs/: .cvsignore  Makefile.am  deskbarapplet.py
doc/: README  new-style_modules.txt
help/: ChangeLog  Makefile.am  deskbar.omf.in
help/C/: deskbar.xml  legal.xml
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/en_GB/: en_GB.po
help/es/: es.po
help/fr/: fr.po
help/it/: it.po
help/oc/: oc.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sl/: sl.po
help/sv/: sv.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
m4/: .cvsignore
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  ar.po  as.po  ast.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  (+61 more)
src/: Makefile.am  __init__.py  applet.py  browser_bookmarks_epiphany.py  browser_bookmarks_mozilla.py  config.py  deskbar-applet.py  handler_address_book.py  handler_browser_bookmarks.py  handler_web_site.py  handlers.py  preferences.py
(+1 files in other folders)
