include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

# The basename of the docbook file.  Generally, you want it to be the same 
# as your app name 
DOC_MODULE = deskbar
#Any entities you use (?)
DOC_ENTITIES = 
# If your file is split into different files, list all the files that
# are included here.  Paths are relative to the C/ subdir
DOC_INCLUDES = legal.xml

# List of figures to include.  Paths are relative to the C/ subdir
DOC_FIGURES = figures/deskbar-applet.png

DOC_LINGUAS = ca el en_GB es fr oc pt_BR ru sv uk
