libexec_SCRIPTS = deskbar-applet.py

deskbardir = $(pythondir)/deskbar
deskbar_PYTHON = \
	__init__.py \
	about.py \
	applet.py \
	browser_bookmarks_epiphany.py \
	browser_bookmarks_mozilla.py \
	config.py \
	handlers.py \
	handler_address_book.py \
	handler_browser_bookmarks.py \
	handler_file_system.py \
	handler_gtk_bookmarks.py \
	handler_prefix.py \
	handler_web_site.py \
	indexer.py \
	preferences.py

EXTRA_DIST = \
	$(libexec_SCRIPTS)
