# ******************************************************************************
# Images and icon
# ******************************************************************************
pixmapsdir = $(datadir)/pixmaps
pixmaps_DATA = deskbar-applet.svg

artdir = $(pkgdatadir)/art
art_DATA = \
	deskbar-applet.svg \
	deskbar-applet-panel-v.svg \
	deskbar-applet-panel-h.svg \
	deskbar-applet-panel-v.png \
	deskbar-applet-panel-h.png \
	deskbar-applet-small.png \
	folder-bookmark.png \
	generic.png \
	yahoo.png \
	google.png \
	epiphany-history.png

EXTRA_DIST = \
	$(pixmaps_DATA) \
	$(art_DATA)
