SUBDIRS = keybinder updater _userdirs
	
deskbar_coredir = $(pythondir)/deskbar/core
deskbar_core_PYTHON = \
	__init__.py \
	BrowserMatch.py \
	Categories.py \
	CoreImpl.py \
	DeskbarHistory.py \
	GconfStore.py \
	Indexer.py \
	Keybinder.py \
	ModuleInstaller.py \
	ModuleList.py \
	ModuleLoader.py \
	ThreadPool.py \
	Utils.py \
	Watcher.py \
	Web.py
