deskbar_handlersdir = $(libdir)/deskbar-applet/handlers
deskbar_handlers_PYTHON = \
	beagle-static.py \
	beagle-live.py \
	desklicious.py \
	epiphany.py \
	files.py \
	galeon.py \
	gdmactions.py \
	google-live.py \
	history.py \
	iswitch-window.py \
	mozilla.py \
	programs.py \
	recent.py \
	web_address.py \
	yahoo.py

if ENABLE_EVOLUTION
deskbar_handlers_PYTHON += evolution.py
endif

EXTRA_DIST = 

