deskbar_actionsdir = $(pythondir)/deskbar/handlers/actions
deskbar_actions_PYTHON = \
	__init__.py \
	CopyToClipboardAction.py \
	OpenDesktopFileAction.py \
	OpenFileAction.py \
	OpenWithApplicationAction.py \
	OpenWithNautilusAction.py \
	SendEmailToAction.py \
	SendFileViaEmailAction.py \
	ShowUrlAction.py