deskbar_actionsdir = $(pythondir)/deskbar/handlers/actions
deskbar_actions_PYTHON = \
	__init__.py \
	ActionsFactory.py \
	CopyToClipboardAction.py \
	GoToLocationAction.py \
	OpenDesktopFileAction.py \
	OpenFileAction.py \
	OpenWithApplicationAction.py \
	OpenWithNautilusAction.py \
	SendEmailToAction.py \
	SendFileViaEmailAction.py \
	ShowUrlAction.py