deskbardir = $(pythondir)/deskbar/ui/cuemiac
deskbar_PYTHON = \
	CuemiacAlignedWindow.py \
	CuemiacAppletButton.py \
	CuemiacButtonUI.py \
	CuemiacHistory.py \
	CuemiacItems.py  \
	CuemiacLayoutProvider.py \
	CuemiacModel.py \
	CuemiacTreeView.py \
	CuemiacPopupEntry.py \
	CuemiacUIManager.py \
	DeskbarAppletButton.py \
	LingeringSelectionWindow.py \
	__init__.py

		
