deskbar_cuemiacdir = $(pythondir)/deskbar/ui/cuemiac
deskbar_cuemiac_PYTHON = \
	__init__.py \
	CuemiacActionsTreeView.py \
	CuemiacCellRenderer.py \
	CuemiacCellRendererAction.py \
	CuemiacCellRendererMatch.py \
	CuemiacEntry.py \
	CuemiacHeader.py \
	CuemiacHistory.py \
	CuemiacItems.py \
	CuemiacModel.py \
	CuemiacAlignedWindow.py \
	CuemiacTreeView.py \
	LingeringSelectionWindow.py
